<resources>
    <!--In general-->
    <string name="app_name">RecyclerView Project</string>
    <string name="n_a">N/A</string>
    <string name="no_name">Untitled Event</string>

    <!--ACTIVITY_MAIN.XML-->
    <string name="addbtn_name">Add New Program</string>
    <string name="initialHrs">0.00 hours\u0020</string>
    <string name="hoursLabel">Total Community Service:</string>
    <!--EXAMPLE_ITEM.XML-->
    <string name="test_text_1">TEST TEXT 1</string>
    <string name="test_text_2">TEST TEXT 2</string>
    <string name="todo">TODO</string>

    <!--LAYOUT_DIALOG.XML-->
    <string name="addservice_dialog">Add New Program</string>

    <!--ACTIVITY_PROGRAM.XML-->
    <string name="serv_hourslbl">hours\u0020</string>
    <string name="addservelbl">Add New Service</string>

    <!--MainActivity.java-->
    <string name="shared_pref">SHARED PREF</string>
    <string name="service_list">SERVICE LIST</string>

    <!--serviceinfo_dialog.xml-->
    <string name="adddateservice">Add New Service</string>
</resources>
