<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        tools:ignore="InvalidId">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:padding="2dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/text_view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/image_view"
            android:layout_marginTop="5dp"
            android:text="@string/test_text_1"
            android:textColor="@android:color/black"
            android:padding="2dp"
            android:textSize="20sp"
            android:fontFamily="@font/myriadpro_light" />

        <TextView
            android:id="@+id/text_view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/image_view"
            android:padding="7dp"
            android:fontFamily="@font/myriadpro_light"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="30dp"
            android:textSize="15sp"
            android:text="@string/test_text_2"/>
    </RelativeLayout>

</android.support.v7.widget.CardView>