<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

   <TextView
       android:id="@+id/totalhrs_lbl"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:padding="10dp"
       android:textSize="35sp"
       android:fontFamily="@font/myriadpro_light"
       android:text="@string/hoursLabel"/>

   <TextView
       android:id="@+id/numhrs_lbl"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:layout_below="@id/totalhrs_lbl"
       android:textSize="30sp"
       android:fontFamily="@font/myriadpro_light"
       android:padding="1dp"
       android:textStyle="italic"
       android:text="@string/initialHrs" />

   <android.support.v7.widget.RecyclerView
       android:id="@+id/recycler_view"
       android:layout_alignBaseline="@id/numhrs_lbl"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:padding="9dp"
       android:layout_marginBottom="60dp"
       android:scrollbars="vertical" />

   <!--TODO #6 Set button below recycler view AND recycler view ABOVE button
         fix recyclerview from going BEHIND button widget-->
   <Button
       android:id="@+id/add_btn"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="12dp"
       android:textSize="30sp"
       android:fontFamily="@font/myriadpro_light"
       android:text="@string/addbtn_name"
       android:background="@color/greyhex"
       android:layout_alignParentBottom="true"
       android:layout_alignBaseline="@id/recycler_view"
       android:textAllCaps="false" />

</RelativeLayout>